docs: update website with new features

--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <div class="badge">v1.0.0 Now Available</div>
+                <div class="badge">v1.1.0 Now Available</div>
                 <h1>Experience Music <br><span class="gradient-text">Without Limits</span></h1>
                 <p>A powerful, open-source desktop music player built for audiophiles who love their local library.
                     Fast, beautiful, and completely yours.</p>
@@ -84,9 +84,29 @@
                     <p>Fine-tune your experience with playback speed control (0.5x - 2.0x) and global volume.</p>
                 </div>
                 <div class="card">
-                    <div class="card-icon"><i data-lucide="moon"></i></div>
-                    <h3>Dark Aesthetics</h3>
-                    <p>A stunning dark interface that's easy on the eyes, day or night.</p>
+                    <div class="card-icon"><i data-lucide="palette"></i></div>
+                    <h3>Theme Engine</h3>
+                    <p>Personalize your experience with 6 vibrant accent colors. Make it truly yours.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><i data-lucide="picture-in-picture-2"></i></div>
+                    <h3>Mini Player</h3>
+                    <p>Keep the music going with a compact, always-on-top player while you multitask.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><i data-lucide="folder-input"></i></div>
+                    <h3>Drag & Drop</h3>
+                    <p>Adding music is as simple as dragging files onto the app. Supports batch adding.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><i data-lucide="list-music"></i></div>
+                    <h3>Playlists</h3>
+                    <p>Organize your library into custom playlists for every mood and occasion.</p>
+                </div>
+                <div class="card">
+                    <div class="card-icon"><i data-lucide="mic-2"></i></div>
+                    <h3>Synced Lyrics</h3>
+                    <p>Sing along with synchronized lyrics that scroll automatically with the music.</p>
                 </div>
                 <div class="card">
                     <div class="card-icon"><i data-lucide="zap"></i></div>
